--- a/src/global/styles/_index.scss
+++ b/src/global/styles/_index.scss
@@ -11,7 +11,7 @@
 @forward './mixins/helpers';
 @forward './mixins/lists';
 @forward './mixins/panel';
-@forward './mixins/pearl-chain-dot';
+@forward './mixins/pearl-chain-bullet';
 @forward './mixins/scrollbar';
 @forward './mixins/shadows';
 @forward './mixins/spacing';
