--- a/src/global/styles/core/variables.scss
+++ b/src/global/styles/core/variables.scss
@@ -1,5 +1,6 @@
 @use 'node_modules/@sbb-esta/lyne-design-tokens/dist/scss/sbb-variables_css--placeholder.scss';
 @use './mediaqueries';
+@use './functions';
 
 @mixin lyne-components-css-vars {
   // Grab css vars defined by `@sbb-esta/lyne-design-tokens` npm package
@@ -188,6 +189,13 @@
   --sbb-focus-outline-color-dark: var(--sbb-color-white-default);
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-default);
   --sbb-focus-outline-width: var(--sbb-border-width-1x);
+
+  //////////////////////////////////////////////////////////////////////////////
+  ///
+  /// SBB Train-formation
+  --sbb-train-formation-wagon-width: #{functions.px-to-rem-build(80)};
+  --sbb-train-formation-wagon-height: #{functions.px-to-rem-build(40)};
+  --sbb-train-formation-wagon-border-radius: #{functions.px-to-rem-build(12)};
 
   //////////////////////////////////////////////////////////////////////////////
   ///
