--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -14,11 +14,13 @@
   --sbb-navigation-section-transform: translateX(100%);
   --sbb-navigation-section-content-padding-inline-start: var(--sbb-spacing-fixed-12x);
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
+  --sbb-navigation-section-width: 100%;
 
   position: var(--sbb-navigation-section-position);
   grid-column: var(--sbb-navigation-section-column);
   left: 0;
   top: 0;
+  width: var(--sbb-navigation-section-width);
   z-index: 10;
 
   ::slotted(*) {
@@ -34,6 +36,11 @@
     --sbb-navigation-section-position: absolute;
     --sbb-navigation-section-transform: translateX(0%);
     --sbb-navigation-section-content-padding-inline-start: 0;
+    --sbb-navigation-section-width: calc(
+      100% + var(--sbb-layout-base-offset-responsive) + var(--sbb-grid-base-gutter-responsive)
+    );
+
+    transform: translateX(calc(var(--sbb-grid-base-gutter-responsive) * -1));
   }
 
   @include sbb.mq($from: wide) {
@@ -41,7 +48,9 @@
   }
 
   @include sbb.mq($from: ultra) {
-    --sbb-navigation-section-padding-block-start: var(--sbb-spacing-responsive-xxl);
+    --sbb-navigation-section-column: 6 / 17;
+    --sbb-navigation-section-padding-block: var(--sbb-spacing-responsive-xxl)
+      var(--sbb-spacing-responsive-l);
   }
 }
 
@@ -110,9 +119,11 @@
   align-items: center;
   gap: var(--sbb-spacing-fixed-1x);
   margin-block-start: var(--sbb-spacing-responsive-xxl);
+  padding-inline-start: var(--sbb-navigation-section-content-padding-inline-start);
 
   @include sbb.mq($from: large) {
     margin-block-start: 0;
+    padding-inline-start: 0;
   }
 
   @include sbb.mq($from: wide) {
@@ -121,6 +132,9 @@
 }
 
 .sbb-navigation-section__back {
+  position: absolute;
+  transform: translateX(calc((100% + var(--sbb-spacing-fixed-1x)) * -1));
+
   @include sbb.mq($from: large) {
     display: none;
   }
