--- a/src/global/styles/_index.scss
+++ b/src/global/styles/_index.scss
@@ -8,6 +8,7 @@
 @forward './mixins/buttons';
 @forward './mixins/card';
 @forward './mixins/helpers';
+@forward './mixins/inputs';
 @forward './mixins/layout';
 @forward './mixins/link';
 @forward './mixins/lists';
