fix: safari compatibility

--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -28,10 +28,11 @@
 
   @include sbb.grid-base;
 
+  column-gap: 0;
   padding-inline: 0;
   position: var(--sbb-navigation-position);
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   pointer-events: none;
   z-index: 10;
 
