--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -18,7 +18,7 @@
 
   position: var(--sbb-navigation-section-position);
   grid-column: var(--sbb-navigation-section-column);
-  left: 0;
+  inset-inline-start: 0;
   top: 0;
   width: var(--sbb-navigation-section-width);
   z-index: 10;
@@ -36,11 +36,7 @@
     --sbb-navigation-section-position: absolute;
     --sbb-navigation-section-transform: translateX(0%);
     --sbb-navigation-section-content-padding-inline-start: 0;
-    --sbb-navigation-section-width: calc(
-      100% + var(--sbb-layout-base-offset-responsive) + var(--sbb-grid-base-gutter-responsive)
-    );
-
-    transform: translateX(calc(var(--sbb-grid-base-gutter-responsive) * -1));
+    --sbb-navigation-section-width: calc(100% + var(--sbb-layout-base-offset-responsive));
   }
 
   @include sbb.mq($from: wide) {
@@ -158,6 +154,7 @@
   @include sbb.mq($from: large) {
     opacity: 0;
     transform: translateY(var(--sbb-spacing-fixed-3x));
+
     transition: {
       duration: var(--sbb-navigation-section-animation-duration);
       delay: var(--sbb-navigation-section-animation-duration);
