--- a/src/components/sbb-wagon/sbb-wagon.scss
+++ b/src/components/sbb-wagon/sbb-wagon.scss
@@ -14,6 +14,7 @@
   --sbb-wagon-shape-outline-width: var(--sbb-border-width-1x);
   --sbb-wagon-icons-padding-block-start: var(--sbb-spacing-fixed-2x);
   --sbb-wagon-icons-gap: var(--sbb-spacing-fixed-1x);
+  --sbb-wagon-icons-height: #{sbb.px-to-rem-build(14)};
 }
 
 .sbb-wagon {
@@ -68,6 +69,8 @@
 }
 
 .sbb-wagon__icons {
+  --sbb-icon-svg-height: var(--sbb-wagon-icons-height);
+
   p {
     @include sbb.screen-reader-only;
   }
