--- a/src/components/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
+++ b/src/components/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
@@ -37,7 +37,7 @@
 }
 
 .sbb-pearl-chain__time-walktime--right {
-  margin-inline-start: calc(var(--sbb-spacing-fixed-2x) - 4px);
+  margin-inline-start: calc(var(--sbb-spacing-fixed-2x) - sbb.px-to-rem-build(4));
 }
 
 .sbb-pearl-chain__time-chain {
