--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -4,28 +4,17 @@
 // travel the shadow boundary are defined through this mixin
 @include sbb.host-component-properties;
 
-@mixin dot {
-  content: '';
-  position: absolute;
-  width: var(--dot-size);
-  height: var(--dot-size);
-  border-radius: 100%;
-}
-
 :host {
+  @include sbb.pearl-chain-bullet-variables;
+
   display: block;
 
-  --sbb-dot-size-large: #{sbb.px-to-rem-build(10)};
-  --sbb-dot-size-small: #{sbb.px-to-rem-build(8)};
   --sbb-pearl-chain-height: var(--sbb-border-width-2x);
   --sbb-pearl-chain-spacing-small: var(--sbb-spacing-fixed-1x);
-  --color-white: var(--sbb-color-white-default);
-  --color-default: var(--sbb-color-black-default);
-  --color-current-location: var(--sbb-color-red-default);
-  --color-current-location-dark: var(--sbb-color-red150-default);
-  --color-cancellation: var(--sbb-color-red-default);
-  --color-past: var(--sbb-color-metal-default);
-  --leg-width: 100%;
+  --sbb-pearl-chain-color: var(--sbb-pearl-chain-bullet-color);
+  --sbb-pearl-chain-color-disruption: var(--sbb-pearl-chain-bullet-color-disruption);
+  --sbb-pearl-chain-color-past: var(--sbb-pearl-chain-bullet-color-past);
+  --sbb-pearl-chain-leg-width: 100%;
 }
 
 .sbb-pearl-chain {
@@ -33,19 +22,25 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
-  color: var(--sbb-color-default);
+  color: var(--sbb-pearl-chain-color);
   width: 100%;
-  padding-block-start: calc((var(--sbb-dot-size-large) - var(--sbb-pearl-chain-height)) / 2);
-  padding-block-end: calc((var(--sbb-dot-size-large) - var(--sbb-pearl-chain-height)) / 2);
-  padding-inline-end: var(--sbb-dot-size-large);
+  padding-block-start: calc(
+    (var(--sbb-pearl-chain-bullet-size-start-end) - var(--sbb-pearl-chain-height)) / 2
+  );
+  padding-block-end: calc(
+    (var(--sbb-pearl-chain-bullet-size-start-end) - var(--sbb-pearl-chain-height)) / 2
+  );
+  padding-inline-end: var(--sbb-pearl-chain-bullet-size-start-end);
 }
 
-// first and last dot
+// first and last bullet
 .sbb-pearl-chain::before,
 .sbb-pearl-chain::after {
-  --dot-size: var(--sbb-dot-size-large);
-  @include dot;
+  @include sbb.pearl-chain-bullet;
+  @include sbb.pearl-chain-bullet-start-stop;
 
+  content: '';
+  position: absolute;
   background-color: currentcolor;
   inset-block-start: 0;
   z-index: 3;
@@ -72,7 +67,7 @@
 
 .sbb-pearl-chain--departure-cancellation::before,
 .sbb-pearl-chain--arrival-cancellation::after {
-  color: var(--color-cancellation);
+  color: var(--sbb-pearl-chain-color-disruption);
 
   @include sbb.if-forced-colors {
     background-color: ActiveText;
@@ -81,7 +76,7 @@
 
 .sbb-pearl-chain--departure-cancellation.pearl-chain--past::before,
 .sbb-pearl-chain--arrival-cancellation.pearl-chain--past::after {
-  color: var(--color-past);
+  color: var(--sbb-pearl-chain-color-past);
 
   @include sbb.if-forced-colors {
     color: GrayText;
@@ -103,7 +98,7 @@
   height: var(--sbb-pearl-chain-height);
   border-inline-end: var(--sbb-pearl-chain-spacing-small) solid Canvas;
   background-color: currentcolor;
-  width: var(--leg-width);
+  width: var(--sbb-pearl-chain-leg-width);
 
   @include sbb.if-forced-colors {
     color: CanvasText;
@@ -118,19 +113,28 @@
 .sbb-pearl-chain--past,
 .sbb-pearl-chain__leg--progress::before,
 .sbb-pearl-chain--progress::before {
-  color: var(--color-past);
+  @include sbb.pearl-chain-bullet-past;
+
+  color: var(--sbb-pearl-chain-color-past);
 }
 
-// dot on leg
+.sbb-pearl-chain__leg--past:not(:first-child)::before,
+.sbb-pearl-chain__leg--progress::before {
+  @include sbb.pearl-chain-bullet-past;
+}
+
+// bullet on leg
 .sbb-pearl-chain__leg:not(:first-child) {
   &::before {
-    --dot-size: var(--sbb-dot-size-small);
-    @include dot;
+    @include sbb.pearl-chain-bullet;
+    @include sbb.pearl-chain-bullet-stop;
 
-    inset-block-start: calc(var(--dot-size) / -2 + var(--sbb-pearl-chain-height) / 2);
+    content: '';
+    position: absolute;
+    inset-block-start: calc(
+      var(--sbb-pearl-chain-bullet-size-stop) / -2 + var(--sbb-pearl-chain-height) / 2
+    );
     inset-inline-start: 0;
-    background-color: Canvas;
-    border: var(--sbb-pearl-chain-height) solid currentcolor;
     z-index: 2;
 
     @include sbb.if-forced-colors {
@@ -166,12 +170,18 @@
 }
 
 .sbb-pearl-chain__leg--progress::after {
-  background-color: var(--color-past);
-  width: var(--leg-status);
+  @include sbb.pearl-chain-bullet-past;
+
+  background-color: var(--sbb-pearl-chain-color-past);
+
+  // --sbb-pearl-chain-leg-status: defined in .tsx file
+  width: var(--sbb-pearl-chain-leg-status);
 }
 
 .sbb-pearl-chain__leg--cancellation {
-  color: var(--color-cancellation);
+  @include sbb.pearl-chain-bullet-disruption;
+
+  color: var(--sbb-pearl-chain-color-disruption);
 
   @include sbb.if-forced-colors {
     color: ActiveText;
@@ -196,18 +206,14 @@
 }
 
 .sbb-pearl-chain__position {
+  @include sbb.pearl-chain-bullet-position;
+
   position: absolute;
-
-  --dot-size: var(--sbb-dot-size-large);
-  @include dot;
-
-  background-color: var(--color-current-location);
   inset-block-start: -200%;
   z-index: 4;
 
-  // --status-position: defined in .tsx file
-  inset-inline-start: var(--status-position);
-  animation: pulse 3s infinite;
+  // --sbb-pearl-chain-status-position: defined in .tsx file
+  inset-inline-start: var(--sbb-pearl-chain-status-position);
 
   @include sbb.if-forced-colors {
     background-color: ActiveText;
@@ -216,14 +222,4 @@
 
 .sbb-pearl-chain__position--no-animation {
   animation: unset;
-}
-
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 var(--color-current-location-dark);
-  }
-
-  40% {
-    box-shadow: 0 0 0 #{sbb.px-to-rem-build(6)} transparent;
-  }
 }
